--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Кинотеатр</string>
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
-    <string name="version">Версия приложения: 1.0</string>
+    <string name="version">Версия приложения: 1.1</string>
+    <string name="toBook">ЗАБРОНИРОВАТЬ</string>
     <string name="gitLink"><a href="https://github.com/Dav1dParker">https://github.com/Dav1dParker</a></string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
